# ground_up_neural_networks

ground_up_neural_networks/: Cargo.toml
ground_up_neural_networks/src/: 1.json  NN  convertimg.py  main.rs  nn.py
ground_up_neural_networks/src/datasets/30/: hsf_0.mit  hsf_1.mit  hsf_2.mit  hsf_3.mit  hsf_4.mit  hsf_6.mit  hsf_7.mit
ground_up_neural_networks/src/datasets/31/: hsf_0.mit  hsf_1.mit  hsf_2.mit  hsf_3.mit  hsf_4.mit  hsf_6.mit  hsf_7.mit
ground_up_neural_networks/src/datasets/32/: hsf_0.mit  hsf_1.mit  hsf_2.mit  hsf_3.mit  hsf_4.mit  hsf_6.mit  hsf_7.mit
ground_up_neural_networks/src/datasets/33/: hsf_0.mit  hsf_1.mit  hsf_2.mit  hsf_3.mit  hsf_4.mit  hsf_6.mit  hsf_7.mit
ground_up_neural_networks/src/datasets/34/: hsf_0.mit  hsf_1.mit  hsf_2.mit  hsf_3.mit  hsf_4.mit  hsf_6.mit  hsf_7.mit
ground_up_neural_networks/src/datasets/35/: hsf_0.mit  hsf_1.mit  hsf_2.mit  hsf_3.mit  hsf_4.mit  hsf_6.mit  hsf_7.mit
ground_up_neural_networks/src/datasets/36/: hsf_0.mit  hsf_1.mit  hsf_2.mit  hsf_3.mit  hsf_4.mit  hsf_6.mit  hsf_7.mit
ground_up_neural_networks/src/datasets/37/: hsf_0.mit  hsf_1.mit  hsf_2.mit  hsf_3.mit  hsf_4.mit  hsf_6.mit  hsf_7.mit
ground_up_neural_networks/src/datasets/38/: hsf_0.mit  hsf_1.mit  hsf_2.mit  hsf_3.mit  hsf_4.mit  hsf_6.mit  hsf_7.mit
ground_up_neural_networks/src/datasets/39/: hsf_0.mit  hsf_1.mit  hsf_2.mit  hsf_3.mit  (+3 more)
ground_up_neural_networks/src/json_dataset/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
ground_up_neural_networks/src/ml_lib/: matrix.rs  netwlayer.rs
