[package]
name = "ground_up_neural_networks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
num = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
json = "*"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 1
